bug: make menu button visible by fixing  resources menu css path

--- a/styles/resources.css
+++ b/styles/resources.css
@@ -52,7 +52,7 @@ body {
     position: relative;
     width: 60px;
     height: 60px;
-    background-image: url("/media/menu.png");
+    background-image: url("../media/menu.png");
     background-size: 30px;
     background-repeat: no-repeat;
     background-position: center;
@@ -60,7 +60,7 @@ body {
 }
 
 .toggle.active {
-    background-image: url("/media/menu.png");
+    background-image: url("../media/menu_active.png");
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: center;
